complete amazon home page clone

--- a/index.html
+++ b/index.html
@@ -15,10 +15,165 @@
 <body>
     <header>
         <div class="navbar">
-        <div class="nav-logo border">
-            <div class="logo"></div>
+            <div class="nav-logo border">
+                <div class="logo"></div>
+            </div>
+            <div class="address border">
+                <p class="first-add">Deliver to</p>
+                <div class="address-icon">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p class="second-add">India</p>
+                </div>
+            </div>
+
+            <div class="navbar-search">
+                <select class="search-select">
+                    <option>All</option>
+                </select>
+                <input class="serach-input" placeholder="Serch Amazon" />
+                <div class="search-icon">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+
+            </div>
+            <div class="nav-signin border">
+                <p><span>Hello, Sign in</span></p>
+                <p class="nav-second">Account & Lists</p>
+            </div>
+            <div class="nav-return border">
+                <p><span>Returns</span></p>
+                <p class="nav-second">& Orders</p>
+            </div>
+            <div class="nav-cart border">
+                <i class="fa-solid fa-cart-shopping"></i>
+                Cart
+            </div>
+        </div>
+        <div class="panel">
+            <div class="panel-all">
+                <i class="fa-solid fa-bars"></i>
+                All
+            </div>
+            <div class="panel-ops">
+                <p>Today's Deals</p>
+                <p>Customer Service</p>
+                <p>Registry</p>
+                <p>Gift Cards</p>
+                <p>Sell</p>
+            </div>
+        </div>
+    </header>
+    <div class="hero-section">
+        <div class="hero-msg">
+            <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local
+                delivery. Click here to go to amazon.in</p>
         </div>
     </div>
-    </header>
+    <div class="shop-section">
+        <div class="box1 box">
+            <div class="box-content">
+                <h3>Gaming accessories</h3>
+                <div class="box-img" style="background-image: url('boximg1.jpg');"></div>
+                <p>See more</p>
+            </div>         
+        </div>
+        <div class="box2 box">
+            <div class="box-content">
+                <h3>Gaming accessories</h3>
+                <div class="box-img" style="background-image: url('boximg4.jpg');"></div>
+                <p>See more</p>
+            </div>     
+        </div>
+        <div class="box3 box">
+            <div class="box-content">
+                <h3>Gaming accessories</h3>
+                <div class="box-img" style="background-image: url('boximg5.jpg');"></div>
+                <p>See more</p>
+            </div>     
+        </div>
+        <div class="box4 box">
+            <div class="box-content">
+                <h3>Gaming accessories</h3>
+                <div class="box-img" style="background-image: url('boximg6.jpg');"></div>
+                <p>See more</p>
+            </div>     
+        </div>
+        <div class="box1 box">
+            <div class="box-content">
+                <h3>Gaming accessories</h3>
+                <div class="box-img" style="background-image: url('boximg1.jpg');"></div>
+                <p>See more</p>
+            </div>         
+        </div>
+        <div class="box2 box">
+            <div class="box-content">
+                <h3>Gaming accessories</h3>
+                <div class="box-img" style="background-image: url('boximg1.jpg');"></div>
+                <p>See more</p>
+            </div>     
+        </div>
+        <div class="box3 box">
+            <div class="box-content">
+                <h3>Gaming accessories</h3>
+                <div class="box-img" style="background-image: url('boximg2.jpg');"></div>
+                <p>See more</p>
+            </div>     
+        </div>
+        <div class="box4 box">
+            <div class="box-content">
+                <h3>Gaming accessories</h3>
+                <div class="box-img" style="background-image: url('boximg3.jpg');"></div>
+                <p>See more</p>
+            </div>     
+        </div>
+    </div>
+    <footer>
+        <div class="footer-panel1">
+            <p>Back to top  </p>
+        </div>
+        <div class="footer-panel2">
+            <ul>
+                <p style="font-size:20px;font-weight: bolder;">Get to Know Us</p>
+                <p>Careers</p>
+                <p>Blog</p>
+                <p>About Amazon</p>
+                <p>Investor Relations</p>
+                <p>Amazon Devices</p>
+                <p>Amazon Science</p>              
+            </ul>
+            <ul>
+                <p style="font-size:20px;font-weight: bolder;">Make Money with Us</p>
+                <p>Careers</p>
+                <p>Blog</p>
+                <p>About Amazon</p>
+                <p>Investor Relations</p>
+                <p>Amazon Devices</p>
+                <p>Amazon Science</p>              
+            </ul>
+            <ul>
+                <p style="font-size:20px;font-weight: bolder;">Amazon Payment Products</p>
+                <p >Careers</p>
+                <p>Blog</p>
+                <p>About Amazon</p>
+                <p>Investor Relations</p>
+                <p>Amazon Devices</p>
+                <p>Amazon Science</p>              
+            </ul>
+            <ul>
+                <p style="font-size:20px;font-weight: bolder;">Let Us Help You</p>
+                <p>Careers</p>
+                <p>Blog</p>
+                <p>About Amazon</p>
+                <p>Investor Relations</p>
+                <p>Amazon Devices</p>
+                <p>Amazon Science</p>              
+            </ul>
+        </div>
+        <div class="footer-panel3">
+            <div class="nav-logo">
+                <div class="logo"></div>
+            </div>
+    </footer>
 </body>
+
 </html>
